--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -72,13 +72,14 @@ A particular color palette (e.g., `pal_seegruen`) can not only be displayed by p
 Hence, the following all yield the same result: 
 
 ```{r, eval = FALSE}
+# TODO: Run them all? 
 seecol(pal_seegruen)
 seecol(seegruen)
 seecol("pal_seegruen")
 seecol("seegruen")
 ```
 
-## Using colors and color palettes
+## Using colors and color palettes with `usecol`
 
 Using colors in a graph:
 
@@ -119,7 +120,7 @@ Combining colors and color palettes to get a specific number of colors:
 
 ```{r combine_pals_n, fig.width = 7, fig.asp = .618}
 seecol(pal = c(Karpfenblau, Seeblau, "gold"), n = 10)          # no names
-seecol(pal = mixcol(c(Karpfenblau, Seeblau, "gold"), n = 10))  # shows HEX values as names
+seecol(pal = usecol(c(Karpfenblau, Seeblau, "gold"), n = 10))  # shows HEX values as names
 ```
 
 Examples of combining colors and color palettes into new color palettes:
@@ -127,6 +128,19 @@ Examples of combining colors and color palettes into new color palettes:
 ```{r bar_seeblau_pinky, fig.width = 7, fig.asp = .618}
 barplot((-5:5)^2+5, col = mixcol(pal = c(rev(pal_seeblau), "white", pal_pinky)))
 barplot(1/sqrt(11:1), col = mixcol(pal = c(rev(pal_seeblau), "white", pal_seegruen)))
+```
+
+
+## Comparing custom palettes 
+
+With `seecol` you can also disply different custom palettes for comparison, when passign the argument as a list:
+
+```{r}
+pal1 <- c(rev(pal_seeblau), "white", pal_pinky)
+pal2 <- usecol(c(Karpfenblau, Seeblau, "gold"), n = 10)
+
+seecol(list(pal1, pal2, pal_unikn, pal_unikn_pair))
+# TODO: Does currently not work for unikn_pair, unikn_ppt, as no defaults are defined there. 
 ```
 
 
