--- a/README.Rmd
+++ b/README.Rmd
@@ -71,9 +71,14 @@ library(unikn)  # load the package
 
 A distinctive and recognizable color scheme is the most obvious element of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design. 
 
+
+
 ### Basic color palettes
 
 Basic color palettes are specified according to the **Corporate Design Manual** [(pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf):
+
+We added the darkest seeblau color (from `pal_seeblau[5]`) to the front of `pal_unikn` and place `white` 
+into the middle of a symmetrical color palette `pal_unikn` (with 11 colors): 
 
 - Primary and default color palette (`pal_unikn`):
 
@@ -81,30 +86,19 @@ Basic color palettes are specified according to the **Corporate Design Manual** 
 # Default color palette: ----- 
 pal_unikn  # 10 default colors (web/sRGB)
 
-# Plot color palette: ----- 
-plot_pal(pal_unikn)
+# See color palett (by plotting it): ----- 
 seecol(pal_unikn)
 ```
 
-<img src = "./inst/pix/README-pal_unikn-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/>
+<!-- <img src = "./inst/pix/README-pal_unikn-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/> -->
 
 - Secondary color palette (`pal_unikn_ppt`): An alternative color palette with more muted colors (intended for PowerPoint presentations) is provided as `pal_unikn_ppt`. 
 
-### Extension
+### All color palettes
 
-Adding the darkest seeblau color (from `pal_seeblau[5]`) to the front of `pal_unikn` places `white` 
-into the middle of a symmetrical color palette `pal_unikn_plus` (with 11 colors): 
-
-```{r pal_unikn_plus, eval = FALSE}
-# Extended unikn color palette: ----- 
-pal_unikn_plus  # 11 colors (white in middle)
-
-# Plot color palette: ----- 
-plot_pal(pal_unikn_plus)
-seecol(pal_unikn_plus)
+```{r pal_all, eval = TRUE, fig.width = 7, fig.height = 5}
+seecol("all")
 ```
-
-<img src = "./inst/pix/README-pal_unikn_plus-1.png" align = "center" alt = "pal_unikn_plus" style = "border:10;"/>
 
 ### Additional color palettes
 
@@ -258,7 +252,7 @@ typeof(unlist(pal_unikn)) # "character"
 unlist(pal_unikn)["seeblau3"]  # call by name
 unlist(pal_unikn)[2]  # call by index
 
-barplot(rep(6:3, 4), col = colorRampPalette(pal_unikn_plus)(7))
+barplot(rep(6:3, 4), col = colorRampPalette(pal_unikn)(7))
 ```
 
 ### ToDo <img src = "./inst/pix/todo.png" alt = "ToDo" align = "right" width = "120px" style = "width: 120px; float: right; border:10;"/>
@@ -283,7 +277,7 @@ Examples for using color palettes in graphs:
 
 ```{r use_pal_demo_barplot, eval = FALSE}
 # Using color palettes:
-barplot(1/sqrt(1:11),  col = seecol(pal_unikn_plus))
+barplot(1/sqrt(1:11),  col = seecol(pal_unikn))
 barplot(1/sqrt(10:25), col = seecol(pal_unikn_pair))
 
 # Using n colors of a palette:
