--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Colors and color palettes"
 author: "SPDS, uni.kn"
-date: "2019 04 02"
+date: "2019 04 06"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -39,29 +39,44 @@ library(unikn)  # load unikn package
 
 ## Viewing color palettes
 
-Distinguish between 2 main modes: 
+The function `seecol` is a general-purpose tool for viewing (or _seeing_) color palettes. 
+`seecol` takes 2 main arguments:
 
-1. Viewing all available color palettes:
+1. `pal` describes either 1 or multiple color palettes (with a default `p = "all"`)
+2. `n` describes the number of desired colors (with a default `n = "all"`).
 
-```{r seecol_all, fig.width = 7, fig.height = 6}
+Based on the setting of `pal`, the `seecol` function distinguishes between 2 modes: 
+
+
+### Comparing multiple color palettes
+
+When the `pal` argument specifies (a list of) multiple color palettes, `seecol` plots a vector for each palette to allow comparing these palettes. 
+Some special keywords within the `unikn` package are `"all"`, `"unikn_basic"` and `grad_all"`. 
+
+Viewing _all_ available color palettes:
+
+```{r seecol_all, fig.width = 7, fig.height = 5}
 seecol()  # same as seecol("all")
 ```
 
-There are 2 subsets of the available color palettes: 
+The set of `"all"` color palettes in `unikn` is sub-divided into 2 categories, which can be accessed by their names:
 
-a. All basic color palettes:
+1. All _basic_ color palettes:
 
 ```{r seecol_unikn_all, fig.width = 7, fig.height = 3}
 seecol("unikn_basic")
 ```
 
-b. all pre-defined color gradients:
+2. all pre-defined color _gradients_:
 
-```{r seecol_grad_all, fig.width = 7, fig.height = 3}
+```{r seecol_grad_all, fig.width = 7, fig.height = 4}
 seecol("grad_all")
 ```
 
-2. Viewing the colors and details of a particular color palette:
+
+### Viewing a particular color palette 
+
+When the `pal` argument specifies a single color palette, `seecol` plots a more detailed view of this particular color palette:
 
 ```{r view_pal, fig.width = 7, fig.asp = .618}
 seecol(pal_unikn)
@@ -73,41 +88,52 @@ Hence, the following all yield the same result:
 
 ```{r, eval = FALSE}
 seecol(pal_seegruen)
-seecol(seegruen)
 seecol("pal_seegruen")
+seecol(seegruen)  # issues a warning
 seecol("seegruen")
 ```
 
+### Extending and mixing color palettes
 
-## Using colors and color palettes with `usecol`
+__ToDo__ (see examples below)
 
-Using colors in a graph:
 
-```{r use_col, fig.width = 7, fig.asp = .618}
+## Using colors and color palettes 
+
+The `usecol` function corresponds to `seecol` by taking the same 2 main arguments (`pal` and `n`). 
+However, as its purpose is _using_ the colors specified by `pal`, rather than plotting (or _seeing_) them, the `pal` argument typically contains only one color palette. 
+
+### Using an existing color palette
+
+Using an exising color palette in a graph:
+
+```{r use_col_default, fig.width = 7, fig.asp = .618}
 # Using a color palette:
 barplot(1/sqrt(1:11), col = usecol(pal_unikn))
-
-barplot(1/sqrt(1:11), col = usecol(pal_bordeaux, n = 11))
-barplot(1/sqrt(1:11), col = usecol(c(rev(pal_seegruen), "white", pal_bordeaux), n = 11))
 ```
 
 
-Alternatively you can use `seecol` to view, save and subesequently use a color palette in a graph: 
 
-So you can first view a color palette, whether you like it... 
+Alternatively we can use `seecol` to view, save and subesequently use a color palette in a graph: 
 
-```{r save_view, fig.width = 7, fig.height = 6}
-mypal <- seecol(pal_unikn_pair)  # save and view the palette. 
+We can first view a color palette (to _see_ whether we like it):  
+
+```{r save_see_my_pal, fig.width = 7, fig.height = 6}
+my_pal <- seecol(pal_unikn_pair)  # save and view the palette. 
 ```
 
-... and then use it in a plot: 
+and then _use_ it (here: the colors saved as `my_pal`) in a plot: 
 
-```{r, fig.width = 7, fig.height = 4}
-barplot(matrix(sample(5:10, size = 16, replace = TRUE), ncol = 8), beside = TRUE, col = mypal)
+```{r use_my_pal, fig.width = 7, fig.height = 4}
+barplot(matrix(sample(5:10, size = 16, replace = TRUE), ncol = 8), beside = TRUE, col = my_pal)
 ```
 
 
-## Modifying color palettes
+## Customizing color palettes
+
+Both `seecol` and `usecol` allow a flexible on-the-fly customization of color palettes.
+
+### Selecting subsets
 
 Using only a subset of colors:
 
@@ -116,15 +142,29 @@ seecol("all", n = 4)
 seecol(pal_unikn, 4)
 ```
 
-Extending a palette to a larger number of colors than contained in the palette:
+Importantly, when using pre-defined color palettes of `unikn` but a value of `n` that is smaller than the length of the current color palette, `usecol` and `seecol` select a reasonable subset of colors:
+
+```{r use_col_small_n, fig.width = 4, fig.asp = .618}
+barplot(1/sqrt(1:2), col = usecol(pal_seeblau, n = 2))
+barplot(1/sqrt(1:3), col = usecol(pal_seeblau, n = 3))
+```
+
+### Extending color palettes
+
+For values of `n` that are larger than the number of available colors in `pal`, the specified color palette is extended:
 
 ```{r use_superset, fig.width = 7, fig.height = 6}
 seecol("all", n = 12)
 seecol(pal_seeblau, 12)
 ```
 
+When using a color palette: 
 
-## Mixing color palettes
+```{r use_col_big_n, fig.width = 7, fig.asp = .618}
+barplot(1/sqrt(1:11), col = usecol(pal_bordeaux, n = 11))
+```
+
+### Mixing color palettes
 
 Combining colors and color palettes: 
 
@@ -140,15 +180,16 @@ seecol(pal = c(Karpfenblau, Seeblau, "gold"), n = 10)          # no names
 seecol(pal = usecol(c(Karpfenblau, Seeblau, "gold"), n = 10))  # shows HEX values as names
 ```
 
-Examples of combining colors and color palettes into new color palettes:
+Examples of _using_ combinations of colors and color palettes to create new color palettes:
 
 ```{r bar_seeblau_pinky, fig.width = 7, fig.asp = .618}
-barplot((-5:5)^2+5, col = usecol(pal = c(rev(pal_seeblau), "white", pal_pinky)))
+barplot(1/sqrt(1:11), col = usecol(c(rev(pal_seegruen), "white", pal_bordeaux), n = 11))
+barplot((-5:5)^2+5,   col = usecol(pal = c(rev(pal_seeblau), "white", pal_pinky)))
 barplot(1/sqrt(11:1), col = usecol(pal = c(rev(pal_seeblau), "white", pal_seegruen)))
 ```
 
 
-## Comparing custom palettes 
+### Comparing custom palettes 
 
 Advanced users can also use `seecol` for displaying and comparing different custom palette. The `pal` argument is a list of colors or color palettes:
 
